--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark  shadow fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">MoonCraft</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
+    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" data-target="#navbarSupportedContent">
+  				<span class="navbar-toggler-icon"></span>
+  			</button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Welcome
