--- a/wishes.html
+++ b/wishes.html
@@ -7,6 +7,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
   </head>
   <style>
@@ -32,6 +35,10 @@
   .card-text-1{
     font-size: 1rem;
       color:white;
+  }
+  .card-text-2{
+    font-size: 0.8rem;
+    color:white;
   }
   .nav-link,.navbar-brand{
     font-family: 'Lobster', cursive;
@@ -235,7 +242,7 @@
         <div class="card front">
           <span class="fa fa-4x fa-smile-o text-center"></span>
           <div class="card-block">
-            <img src="peek.png" alt=""height="330px">
+            <img src="peek.png" alt=""height="350px">
           </div>
         </div>
         <!-- End Card 5 Front -->
@@ -244,7 +251,8 @@
         <div class="card back text-center">
           <div class="card-block">
             <h4 class="card-title">Peek</h4>
-            <p class="card-text">test</p>
+            <p class="card-text-2">HAPPPPYYYY BUDDAAAAYYYYY MOOONNN!!! YOU'VE BEEN SUCH A GREAT FRIEND TO ME. YOU'VE LOVED MY SINGING LOL. WE MET FOR THE FIRST TIME IN AN IGLOO RAID WHERE ME AND SAAT WERE TALKING IN HINDI.. AND YOU HAPPENED TO KNOW HINDI AS WELL.. AHHA AND THE NEXT DAY I SEE YOU ARE FRIENDS WITH URGJ SOMEHOW.. AND THIS IS HOW WE BECAME FRIENDS AND HERE WE ARE :D. WAS REALLY FUN PLAYING MINECRAFT WITH YOU AND HAHA LOVED IT WHEN YOU JUMPED TO DEATH TRYING TO SAVE MY ITEMS WHEN I FELL DOWN < 3. THOUGH YOU HAVE GROWN A LITTLE OLDER NOW.. I'LL STILL CONTINUE TO ANNOY YOU JUST LIKE EVERYDAY :D. HAVE AN AMAZING AND BLESSED YEAR AHEAD, MAY ALL YOUR DREAMS BE FULFILLED.
+ALWAYS STAY IN TOUCH. ILY </p>
 
           </div>
         </div>
@@ -506,7 +514,7 @@ it was great getting to know you. I hope you have a blessed birthday with lots o
     <div class="card back text-center">
       <div class="card-block">
         <h4 class="card-title">Calanit</h4>
-        <p class="card-text">Happy birthday Moonlights! Have an amazing day!</p>
+        <p class="card-text">HAPPY BIRTHDAY MOON!!! i love you so so much, you’re an amazing friend and human being. i hope you have the most incredible day and a wonderful year. thank you for being you! ily</p>
     <!-- End Card 6 Back -->
   </div>
 </div>
