--- a/developers.html
+++ b/developers.html
@@ -55,12 +55,12 @@ body {
               <a class="nav-link" href="wishes.html">Wishes</a>
 
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="MoonlightsSurprise.html">Surprise!</a>
-             
+
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="Makers.html">Developers</a>
+                <a class="nav-link" href="developers.html">Developers</a>
                 <span class="sr-only">(current)</span>
               </li>
           </ul>
@@ -68,7 +68,7 @@ body {
       </div>
     </nav>
 
-</br> </br> </br> </br> 
+</br> </br> </br> </br>
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
@@ -96,13 +96,13 @@ body {
   </div>
 
 
-  
+
 <div class="col mb-4">
     <div class="card">
       <img src="saat.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">SmartSaatvi</h5>
-        <p class="card-text">Test</p>
+        <h5 class="card-title">Smart Saatvi</h5>
+        <p class="card-text">Hey! Thank you for stopping by and checking our website. I'm glad that I made this wholesome website in collaboration with Mr. Kirito aka vampire. Love ya moon stay blessed! Cpr username - Smart Saatvi.</p>
         <div class="card-footer">
         <small class="text-muted">Saat#0330</small></div>
       </div>
