--- a/MoonlightsSurprise.html
+++ b/MoonlightsSurprise.html
@@ -161,6 +161,9 @@ body {
               <a class="nav-link" href="MoonlightsSurprise.html">Surprise!</a>
               <span class="sr-only">(current)</span>
             </li>
+            <li class="nav-item ">
+                <a class="nav-link" href="developers.html">Developers</a>
+              </li>
           </ul>
         </div>
       </div>
