--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <style >
+
 .nav-link,.navbar-brand{
   font-family: 'Lobster', cursive;
   font-size: 1.5rem;
@@ -140,6 +141,9 @@ color: #004d40;
         </li>
         <li class="nav-item">
           <a class="nav-link" href="MoonlightsSurprise.html">Surprise!</a>
+          <li class="nav-item ">
+              <a class="nav-link" href="developers.html">Developers</a>
+            </li>
         </li>
       </ul>
     </div>
