--- a/wishes.html
+++ b/wishes.html
@@ -120,6 +120,10 @@
         <li class="nav-item">
           <a class="nav-link" href="MoonlightsSurprise.html">Surprise!</a>
         </li>
+        <li class="nav-item ">
+            <a class="nav-link" href="developers.html">Developers</a>
+        
+          </li>
       </ul>
     </div>
   </div>
