--- a/index.html
+++ b/index.html
@@ -150,6 +150,20 @@ color: #004d40;
   </div>
 </nav>
 
+</br> 
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+
+  <strong>For better use experience please view the website from your laptop/PC or enable landscape mode while viewing from phone</strong>
+
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+
+    <span aria-hidden="true">&times;</span>
+
+  </button>
+
+</div>
+
+
 <body class = "main">
   <div class="card">
     <img class="girl" src="Girl.png" alt="Girl">
