--- a/MoonlightsSurprise.html
+++ b/MoonlightsSurprise.html
@@ -327,7 +327,7 @@ body {
     </svg>
     <div class="text">
       <h1>Happy birthday!</h1>
-      <h1>Moonlights</h1>
+      <h1>Moonliqhts</h1>
     </div>
 
 
