--- a/developers.html
+++ b/developers.html
@@ -97,12 +97,12 @@ body {
 
 
 
-<div class="col mb-4">
+<div class="col mb-6">
     <div class="card">
       <img src="saat.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Smart Saatvi</h5>
-        <p class="card-text">Hey! Thank you for stopping by and checking our website. I'm glad that I made this wholesome website in collaboration with Mr. Kirito aka vampire. Love ya moon stay blessed! Cpr username - Smart Saatvi.</p>
+        <p class="card-text">Hey! Thank you for stopping by and checking our website. I'm glad that I made this wholesome website in collaboration with Mr. Kirito aka vampire. Happy Birthday Moon! Cpr username - Smart Saatvi.</p>
         <div class="card-footer">
         <small class="text-muted">Saat#0330</small></div>
       </div>
